# erwhi-hedgehog-ros

./: README.md
erwhi_bringup/: CMakeLists.txt  package.xml
erwhi_bringup/config/: imu_bosch.yaml
erwhi_bringup/launch/: bringup.launch
erwhi_bringup/launch/include/: sensors.launch
erwhi_control/: CMakeLists.txt  package.xml
erwhi_control/config/: control.yaml  twist_mux.yaml
erwhi_control/launch/: control.launch  localization.launch  twist_mux.launch
erwhi_description/: CMakeLists.txt  package.xml
erwhi_description/launch/: description.launch  display.launch
erwhi_description/meshes/: antenna.stl  ball.stl  ball_caster_fixed.stl  base_mk4_v33.stl  battery.stl  battery_holder.stl  encoderkit.stl  ext_dc.stl  motor.stl  power_switch.stl  sengi_F.stl  standoff.stl  wago2.stl  wago3.stl
erwhi_description/rviz/: display.rviz
erwhi_description/urdf/: casters.urdf.xacro  description.urdf.xacro  details.urdf.xacro  erwhi.urdf.xacro  materials.xacro  sensors.urdf.xacro
erwhi_description/urdf/casters/: ball_caster.urdf.xacro  ball_caster_fixed.urdf.xacro  omniwheel.urdf.xacro
erwhi_description/urdf/details/components/: antenna.urdf.xacro  battery.urdf.xacro  battery_holder.urdf.xacro  encoder.urdf.xacro  motor.urdf.xacro  up2.urdf.xacro
erwhi_description/urdf/details/connectors/power/: ext_dc.urdf.xacro  power_switch.urdf.xacro
erwhi_description/urdf/details/connectors/standoffs/: standoff.urdf.xacro
erwhi_description/urdf/details/connectors/wago/: wago2.urdf.xacro  wago3.urdf.xacro
erwhi_description/urdf/parts/: chassis.urdf.xacro  wheel.urdf.xacro
erwhi_description/urdf/sensors/: d435.urdf.xacro  imu.urdf.xacro  sengi.urdf.xacro
erwhi_gazebo/: CMakeLists.txt  package.xml
erwhi_gazebo/launch/: erwhi_gazebo.launch  my_empty.launch
erwhi_gazebo/worlds/: garage.world  kitchen.world  kitchen_closed_old.world
erwhi_navigation/: CMakeLists.txt  package.xml
erwhi_navigation/config/: costmap_common_params.yaml  costmap_exploration_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml  teb_planner.yaml
erwhi_navigation/launch/: explore.launch  frontier_exploration.launch  move_base.launch  rtabmap.launch
erwhi_up/: CMakeLists.txt  package.xml
erwhi_up/launch/: d435_slam.launch  erwhi_simulation.launch
erwhi_up/rviz/: d435_slam.rviz  only_up.rviz  up_realsense.rviz
